# ebac-rest-api

bookstore/: pyproject.toml
bookstore/core/: settings.py
bookstore/order/: factories.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: __init__.py  order.py
bookstore/order/serializers/: order_serializer.py
bookstore/product/: admin.py  factories.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: category_serializer.py  product_serializer.py
